# werewolves-ui

./: .env.example  .env.test  .gitignore  Dockerfile.green  Dockerfile.purple  README.md  agent_card.toml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  restart_all.ps1  scenario.toml
.github/workflows/: publish.yml  test-and-publish.yml
backend/: requirements.txt  start_agents.ps1  start_local_game.ps1  stop_local_game.ps1
backend/scripts/: check_connections.py  configure_llm.py  simulate_game.py
backend/src/green_agent/: __init__.py  a2a_client.py  models.py  orchestrator.py  scoring.py  server.py
backend/src/purple_agent/: __init__.py  player.py  role_prompts.py  server.py
backend/src/werewolf/: apis.py  lm.py
frontend/: game.html  index.html  settings.html
frontend/css/: dark-atmosphere.css  game.css  main.css  nav.css  settings.css  styles.css
frontend/js/: audio.js  game.js  i18n.js  settings.js  websocket.js
leaderboard_ui/: index.html
leaderboard_ui/css/: leaderboard.css
leaderboard_ui/js/: leaderboard.js
scripts/: cleanup_headers.py  test_local.sh  trigger_assessment.py
tests/: __init__.py  conftest.py  test_green_agent.py  test_purple_agent.py
