[project]
name = "werewolf-arena"
version = "1.0.0"
description = "Werewolf Arena - AI Agent evaluation through social deduction game"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core dependencies
    "jinja2>=3.0.0",
    "tqdm>=4.0.0",
    "pyyaml>=6.0.0",
    "pandas>=2.0.0",

    # LLM APIs
    "openai>=1.0.0",
    "anthropic>=0.18.0",

    # A2A Server
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",

    # Configuration
    "toml>=0.10.2",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/src/green_agent", "backend/src/purple_agent", "backend/src/werewolf"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
